--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "precommit": "npm run lint",
+    "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
     "@nuxtjs/apollo": "^3.0.1",
@@ -26,20 +27,25 @@
     "graphql-tag": "^2.6.1",
     "l": "^0.6.0",
     "nuxt": "^1.0.0",
+    "readmore-js": "^2.1.0",
     "vue-apollo": "^3.0.0-alpha.3",
     "whatwg-fetch": "^2.0.3",
     "wp-nuxt": "^1.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
-    "eslint": "^4.3.0",
+    "eslint": "^4.19.1",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-html": "^3.1.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-vue": "^4.5.0",
+    "prettier": "^1.12.1",
     "pug": "^2.0.0-rc.4",
     "pug-loader": "^2.3.0",
     "stylus": "^0.54.5",
